# gitie

./: Cargo.toml  README.md  README_zh.md  config.example.json  config.json  perf_review.md  test.txt
assets/: commit-deviation.md  commit-generator.md  commit-message-generator.md  commit-prompt  commit-syntax-prompt  commit-syntax.md  config.example.toml  expert-prompt.md  explanation-prompt  git-helper.md  git-master-prompt  review-c-prompt.md  review-cpp-prompt.md  review-go-prompt.md  review-java-prompt.md  review-js-prompt.md  review-python-prompt.md  review-rust-prompt.md
doc/: DEVELOPMENT.md  PRD.md  README.md  ROADMAP.md  VERSION_HISTORY.md  cleanup_backups.sh  cleanup_script.sh
doc/design/: README.md  TechDesign.md
doc/development/: README.md  development_guide.md  module_reference.md  quickstart.md
doc/prds/: connect_devops.md  optimize_ai_option.md
doc/product/: README.md
doc/project/: README.md
doc/reference/: README.md
doc/releases/: README.md
doc/requirements/: README.md
doc/stories/: ai-commit.md
doc/v0.6-initial-design-backup/: prompt_handler.rs  review.rs
src/: ai_explainer.rs  ai_utils.rs  cli.rs  commit_commands.rs  config.rs  errors.rs  git_commands.rs  lib.rs  main.rs  nops.rs  tree_sitter_analyzer.rs  types.rs
src/ai_module/: explainer.rs  mod.rs  prompt_handler.rs  utils.rs
src/cli_interface/: args.rs  mod.rs  ui.rs
src/command_processing/: commit.rs  review.rs
src/config_management/: analyzer.rs  settings.rs
tests/: cli_args_test.rs  default_ai_behavior_test.rs  tree_sitter_analyzer_tests.rs  tree_sitter_tests.rs
(+29 files in other folders)
