[package]
name = "gitie"
version = "0.1.0"
edition = "2024"

# Define library configuration to allow testing
[lib]
name = "gitie"
path = "src/lib.rs"

[[bin]]
name = "gitie"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
chrono = "0.4.31"
colored = "3.0.0"
dirs = "6.0.0"
dirs-next = "2.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
tree-sitter-java = "0.20.0"
tree-sitter-python = "0.20.0"
tree-sitter-go = "0.19.1"
streaming-iterator = "0.1.9"


[dev-dependencies]
tempfile = "3.10.1"
